syntax = "proto3";

package clutch.config.module.slackbot.v1;

option go_package = "github.com/lyft/clutch/backend/api/config/module/slackbot/v1;slackbotv1";

message Config {
  // Can be found in the OAuth & Permissions section of your bot app's settings
  string bot_token = 1;
}